[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/screens/screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/screens/lose_screen.gd" type="Script" id=2]

[node name="LoseScreen" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Title" parent="." index="0"]
text = "Game Over"

[node name="HomeButton" type="Button" parent="Menu" index="0"]
margin_right = 48.0
margin_bottom = 21.0
text = "Home"

[node name="QuitButton" type="Button" parent="Menu" index="1"]
margin_top = 25.0
margin_right = 48.0
margin_bottom = 46.0
text = "Quit"

[connection signal="pressed" from="Menu/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
